first waterstatus.html writeup/footer changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form method="get" action="waterstatus.html">
                 <label for="name">Username</label>
                 <input type="text" id="name"/>
-
+                <br />
                 <label for="password">Password</label>
                 <input type="text" id="password"/>
                 <button type="submit">Login</button>
@@ -35,7 +35,7 @@
 
         <footer>
             <hr />
-            <span class="text-reset">Auther Name</span>
+            <span class="text-reset">Author:</span>
             <br />
             <a href="https://github.com/garrettsvance">GitHub</a>
         </footer>
