previous entries page/other misc changes

--- a/waterstatus.html
+++ b/waterstatus.html
@@ -12,8 +12,9 @@
             <nav>
 
                 <menu>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Log In</a></li>
                     <li><a href="waterstatus.html">Water Status</a></li>
+                    <li><a href="previousentries.html">Previous Tests</a></li>
                     <li><a href="forums.html">Forums</a></li>
                 </menu>
             </nav>
@@ -22,7 +23,8 @@
     </header>
 
     <main>
-        <form method="get">
+        <h2>Check Current Water Status/Receive Recommendations</h2>
+        <form method="get" action="recommendations.html">
             <label for="poolsize">Please enter your <strong>pool size</strong> in "gallons:"</label>
             <input type="number" id="poolsize" placeholder="Gallons" />
             <br />
