--- a/previousentries.html
+++ b/previousentries.html
@@ -22,16 +22,29 @@
             <hr />
         </header>
 
+
         <main>
-            <h2>Please Log In to Continue</h2>
-            <form method="get" action="waterstatus.html">
-                <label for="name">Username</label>
-                <input type="text" id="name"/>
-                <br />
-                <label for="password">Password</label>
-                <input type="text" id="password"/>
-                <button type="submit">Login</button>
-            </form>
+            <h2>Previous Tests:</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>PH</th>
+                        <th>Total Chlorine</th>
+                        <th>Free Chlorine</th>
+                        <th>Alkalinity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>5/10/2023</td>
+                        <td>2.0</td>
+                        <td>5.0</td>
+                        <td>3.0</td>
+                        <td>40</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
 
         <footer>
