added the recommendations page

--- a/waterstatus.html
+++ b/waterstatus.html
@@ -49,6 +49,7 @@
         <hr />
         <span class="text-reset">Author:</span>
         <br />
+        <p>Garrett Vance</p>
         <a href="https://github.com/garrettsvance">GitHub</a>
     </footer>
 </body>
