--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <hr />
             <span class="text-reset">Author:</span>
             <br />
+            <p>Garrett Vance</p>
             <a href="https://github.com/garrettsvance">GitHub</a>
         </footer>
     </body>
