--- a/previousentries.html
+++ b/previousentries.html
@@ -51,6 +51,7 @@
             <hr />
             <span class="text-reset">Author:</span>
             <br />
+            <p>Garrett Vance</p>
             <a href="https://github.com/garrettsvance">GitHub</a>
         </footer>
     </body>
