--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"
       />
     </head>
-    <body class="bg-dark text-light">
+    <body class="bg-secondary text-dark">
         <header class="container-fluid">
             <nav class="navbar fixed-top navbar-dark">
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
