cleared up some css junk, fixed logo placement, deleted forums

--- a/waterstatus.html
+++ b/waterstatus.html
@@ -14,7 +14,7 @@
     </head>
     <body class="bg-secondary fixed-top text-dark">
         <header class="container-fluid">
-            <nav class="navbar fixed-top navbar-dark">
+            <nav class="navbar fixed-top navbar-dark logo">
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
@@ -26,20 +26,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="previousentries.html">Previous Tests</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="forums.html">Forums</a>
-                    </li>
+                    </li> -->
                 </menu>
             </nav>
         </header>
 
     <main class="container-fluid">
-        <div class="row text-center">
-            <div class="col-md-12">
-                <div id="picture" class="picture-box"><img src="Pool-Test-Strips.jpg" alt="random" style="height:375px"/></div>
-                </div>
+        <div class="row text-center mainpage">
+            <div id="picture" class="picture-box"><img src="Pool-Test-Strips.jpg" alt="random" style="height:375px"/></div>
             </div>
-            <div class="col-md-12">
                 <div class="check-receive">
                     <h2>Check Current Water Status/Receive Recommendations</h2>
                     <form method="get" action="recommendations.html">
@@ -70,7 +67,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
         </div>
     </main>
 
