--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body class="bg-secondary text-dark">
         <header class="container-fluid">
-            <nav class="navbar fixed-top navbar-dark">
+            <nav class="navbar fixed-top navbar-dark logo">
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="previousentries.html">Previous Tests</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="forums.html">Forums</a>
-                    </li>
+                    </li> -->
                 </menu>
             </nav>
         </header>
