--- a/previousentries.html
+++ b/previousentries.html
@@ -4,26 +4,37 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Pool Manager</title>
+        <link rel="stylesheet" href="main.css" />
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous"
+      />
     </head>
-    <body>
-        <header>
-            <h1>My Pool Manager<sup>&reg;</sup></h1>
-
-            <nav>
-
-                <menu>
-                    <li><a href="index.html">Log In</a></li>
-                    <li><a href="waterstatus.html">Water Status</a></li>
-                    <li><a href="previousentries.html">Previous Tests</a></li>
-                    <li><a href="forums.html">Forums</a></li>
+    <body class="bg-secondary text-dark">
+        <header class="container-fluid">
+            <nav class="navbar fixed-top navbar-dark logo">
+                <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
+                <menu class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="waterstatus.html">Water Status</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link active" href="previousentries.html">Previous Tests</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="forums.html">Forums</a>
+                    </li> -->
                 </menu>
             </nav>
-
-            <hr />
         </header>
 
 
-        <main>
+        <main class="container-fluid">
             <h2>Previous Tests:</h2>
             <table>
                 <thead>
@@ -47,12 +58,11 @@
             </table>
         </main>
 
-        <footer>
-            <hr />
-            <span class="text-reset">Author:</span>
-            <br />
-            <p>Garrett Vance</p>
-            <a href="https://github.com/garrettsvance">GitHub</a>
+        <footer class="bg-dark text-dark text-muted">
+            <div class="container-fluid">
+            <span class="text-reset">Garrett Vance</span>
+                <a class="text-reset" href="https://github.com/garrettsvance">GitHub</a>
+            </div>
         </footer>
     </body>
-</html>
+    </html>
