--- a/recommendations.html
+++ b/recommendations.html
@@ -4,55 +4,73 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Pool Manager</title>
+        <link rel="stylesheet" href="main.css" />
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+        crossorigin="anonymous"
+      />
     </head>
-    <body>
-        <header>
-            <h1>My Pool Manager<sup>&reg;</sup></h1>
-
-            <nav>
-
-                <menu>
-                    <li><a href="index.html">Log In</a></li>
-                    <li><a href="waterstatus.html">Water Status</a></li>
-                    <li><a href="previousentries.html">Previous Tests</a></li>
-                    <li><a href="forums.html">Forums</a></li>
+    <body class="bg-secondary text-dark">
+        <header class="container-fluid">
+            <nav class="navbar fixed-top navbar-dark logo">
+                <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
+                <menu class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="waterstatus.html">Water Status</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="previousentries.html">Previous Tests</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="forums.html">Forums</a>
+                    </li> -->
                 </menu>
             </nav>
-
-            <hr />
         </header>
 
-        <main>
+        <main class="container-fluid">
             <h2>Our Recommendations Based on your Input of:</h2>
             <br />
-            <h3>(Pull from previous data entries and list them out for review)</h3>
 
             <section>
                 <H4>PH Level</H4>
-                <p>"Your PH levels are high/low. In order to balance them, you'll need to do xyz. Here is a list of recommended products and where to find them"</p>
+                <p>"Your PH levels are high/low. In order to get them back to where they need to be, follow these instructions."</p>
+                <p>Recommended Products:</p>
+                <p>Other Users Reviews:</p>
             </section>
 
             <section>
                 <h4>Bound Chlorine</h4>
                 <p>"Your Bound Chlorine levels are high/low. In order to get them back to where they need to be, follow these instructions.</p>
+                <p>Recommended Products:</p>
+                <p>Other Users Reviews:</p>
             </section>
 
             <section>
                 <h4>Free Chlorine</h4>
                 <p>"Your Free Chlorine levels are high/low. In order to get them back to where they need to be, follow these instructions.</p>
+                <p>Recommended Products:</p>
+                <p>Other Users Reviews:</p>
             </section>
 
             <section>
                 <h4>Alkalinity</h4>
                 <p>"Your Alkalinity levels are high/low. In order to get them back to where they need to be, follow these instructions.</p>
+                <p>Recommended Products:</p>
+                <p>Other Users Reviews:</p>
             </section>
+        </main>
             
-        <footer>
-            <hr />
-            <span class="text-reset">Author:</span>
-            <br />
-            <p>Garrett Vance</p>
-            <a href="https://github.com/garrettsvance">GitHub</a>
-        </footer>
-    </body>
+            <footer class="bg-dark text-dark text-muted">
+                <div class="container-fluid">
+                <span class="text-reset">Garrett Vance</span>
+                    <a class="text-reset"href="https://github.com/garrettsvance">GitHub</a>
+                </div>
+            </footer>
+        </body>
     </html>
