updated github link to the repo

--- a/previousentries.html
+++ b/previousentries.html
@@ -61,7 +61,7 @@
         <footer class="bg-dark text-dark text-muted">
             <div class="container-fluid">
             <span class="text-reset">Garrett Vance</span>
-                <a class="text-reset" href="https://github.com/garrettsvance">GitHub</a>
+                <a class="text-reset" href="https://github.com/garrettsvance/startup">GitHub</a>
             </div>
         </footer>
     </body>
