local storage configured for login, beginning work on the water status page

--- a/index.html
+++ b/index.html
@@ -36,15 +36,10 @@
         <main class="container-fluid bg-secondary text-center">
             <div>
                 <h2>Please Log In to Continue</h2>
-                <form method="get" action="waterstatus.html">
-                    <!-- <label for="name">Username</label> -->
-                    <input type="text" id="name" placeholder="Username"/>
-                    <br />
-                    <!-- <label for="password">Password</label> -->
-                    <input type="text" id="password" placeholder="Password"/>
-                    <br />
-                    <button type="submit">Login</button>
-                </form>
+                <div>
+                    <input type="text" id="name" placeholder="Username" />
+                    <button class="btn btn-secondary" onclick="login()">Login</button>
+                </div>
             </div>
         </main>
 
@@ -54,5 +49,6 @@
                 <a class="text-reset"href="https://github.com/garrettsvance/startup">GitHub</a>
             </div>
         </footer>
+        <script src="login.js"></script>
     </body>
 </html>
