--- a/recommendations.html
+++ b/recommendations.html
@@ -34,11 +34,11 @@
         </header>
 
         <main class="container-fluid">
-            <h2>Our Recommendations Based on your Input of:</h2>
+            <h2 id="poolInput">Our Recommendations Based on your Input of:</h2>
             <br />
 
             <section>
-                <H4>PH Level</H4>
+                <H4 id="ph">PH Level</H4>
                 <p>"Your PH levels are high/low. In order to get them back to where they need to be, follow these instructions."</p>
                 <p>Recommended Products:</p>
                 <p>Other Users Reviews:</p>
