--- a/waterstatus.html
+++ b/waterstatus.html
@@ -24,7 +24,7 @@
                         <a class="nav-link active" href="waterstatus.html">Water Status</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="previousentries.html">Previous Tests</a>
+                        <a class="nav-link" href="recommendations.html">Product Recommendations</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="forums.html">Forums</a>
