--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body class="bg-secondary text-dark">
         <header class="container-fluid">
-            <nav class="navbar fixed-top navbar-dark logo">
+            <nav class="navbar navbar-dark logo">
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="waterstatus.html">Water Status</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="previousentries.html">Previous Tests</a>
+                        <a class="nav-link" href="recommendations.html">Product Recommendations</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="forums.html">Forums</a>
