fixed text error on waterstatus

--- a/waterstatus.html
+++ b/waterstatus.html
@@ -102,13 +102,13 @@
         </div>
         <br />
         <div class="alk" id="alkLow">
-            <p>Your Alkaline levels are lower than optimal. You'll want to add some sodium carbonate to your pool. Here are some recommended products:</p>
+            <p>Your Alkaline levels are lower than optimal. You'll want to add some sodium carbonate to your pool.</p>
         </div>
         <div class="alk" id="alkOpt">
             <p>Your Alkaline levels are just right! No further action is needed at this time.</p>
         </div>
         <div class="alk" id="alkHigh">
-            <p>Your Alkaline levels are higher than optimal. You'll want to add some sodium bisulfate to bring those levels back down. Here are some recommended products:</p>
+            <p>Your Alkaline levels are higher than optimal. You'll want to add some sodium bisulfate to bring those levels back down.</p>
         </div>
 
     </main>
