--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,8 @@
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Log In</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="waterstatus.html">Water Status</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="recommendations.html">Product Recommendations</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="forums.html">Forums</a>
-                    </li> -->
                 </menu>
             </nav>
         </header>
@@ -48,13 +39,17 @@
                     <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
                     <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
                   </div>
+                  <div id="accountControls" style="display: none">
+                  <button type="button" class="btn btn-primary" onclick="continueUser()">Continue</button>  
+                  <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>  
+                  </div>
             </div>
         </main>
 
         <footer class="bg-dark text-dark text-muted">
             <div class="container-fluid">
-            <span class="text-reset">Garrett Vance</span>
-                <a class="text-reset"href="https://github.com/garrettsvance/startup">GitHub</a>
+
+                <a class="text-reset"href="https://github.com/garrettsvance/startup"> Garrett Vance - GitHub</a>
             </div>
         </footer>
         <script src="login.js"></script>
