--- a/public/recommendations.html
+++ b/public/recommendations.html
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Log In</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="waterstatus.html">Water Status</a>
@@ -70,12 +70,12 @@
             <div id="quote" class="quote-box bg-secondary text-light"></div>
         </main>
             
-            <footer class="bg-dark text-dark text-muted">
-                <div class="container-fluid">
-                <span class="text-reset">Garrett Vance</span>
-                    <a class="text-reset"href="https://github.com/garrettsvance/startup">GitHub</a>
-                </div>
-            </footer>
+        <footer class="bg-dark text-dark text-muted">
+            <div class="container-fluid">
+                <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button> 
+                <a class="text-reset"href="https://github.com/garrettsvance/startup"> Garrett Vance - GitHub</a>
+            </div>
+        </footer>
             <script src="recommendations.js" defer></script>
         </body>
     </html>
