--- a/public/waterstatus.html
+++ b/public/waterstatus.html
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
                 <menu class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Log In</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="waterstatus.html">Water Status</a>
@@ -123,8 +123,8 @@
 
     <footer class="bg-dark text-dark text-muted">
         <div class="container-fluid">
-        <span class="text-reset">Garrett Vance</span>
-            <a class="text-reset" href="https://github.com/garrettsvance/startup">GitHub</a>
+            <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button> 
+            <a class="text-reset"href="https://github.com/garrettsvance/startup"> Garrett Vance - GitHub</a>
         </div>
     </footer>
     <script src="waterstatus.js" defer></script>
