--- a/index.html
+++ b/index.html
@@ -1,57 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Pool Manager</title>
-        <link rel="stylesheet" href="main.css" />
-        <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-        crossorigin="anonymous"
-      />
-    </head>
-    <body class="bg-secondary text-dark">
-        <header class="container-fluid">
-            <nav class="navbar navbar-dark logo">
-                <a class="navbar-brand" href="#">My Pool Manager<sup>&reg;</sup></a>
-                <menu class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
-                    </li>
-                </menu>
-            </nav>
-        </header>
+  <head>
+    <meta charset="utf-8" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
-        <main class="container-fluid bg-secondary text-center">
-            <div>
-                <h2>Please Log In to Continue</h2>
-                <div id="loginControls">
-                    <div class="input-group mb-3">
-                      <span class="input-group-text">@</span>
-                      <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
-                    </div>
-                    <div class="input-group mb-3">
-                      <span class="input-group-text">🔒</span>
-                      <input class="form-control" type="password" id="userPassword" placeholder="password" />
-                    </div>
-                    <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
-                    <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
-                  </div>
-                  <div id="accountControls" style="display: none">
-                  <button type="button" class="btn btn-primary" onclick="continueUser()">Continue</button>  
-                  <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>  
-                  </div>
-            </div>
-        </main>
-
-        <footer class="bg-dark text-dark text-muted">
-            <div class="container-fluid">
-
-                <a class="text-reset"href="https://github.com/garrettsvance/startup"> Garrett Vance - GitHub</a>
-            </div>
-        </footer>
-        <script src="login.js"></script>
-    </body>
+    <title>My Pool Manager</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/index.jsx"></script>
+  </body>
 </html>
